# knowledge-platform

./: .env.example  .environment  .gitignore  Dockerfile  README.md  compose.yml  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run_dev.sh
.upsun/: config.yaml
m4n_knowledge_platform/: urls.py  views.py  wsgi.py
m4n_knowledge_platform/forms/: apps.py  models.py
m4n_knowledge_platform/home/: apps.py  models.py
m4n_knowledge_platform/images/: apps.py
m4n_knowledge_platform/knowledgeplatform/: apps.py  models.py
m4n_knowledge_platform/navigation/: apps.py  models.py
m4n_knowledge_platform/needs_and_solutions_hub/: apps.py  forms.py  models.py  wizard.py
m4n_knowledge_platform/news/: apps.py  models.py
m4n_knowledge_platform/settings/: base.py  dev.py  production.py
m4n_knowledge_platform/standardpages/: apps.py  models.py
m4n_knowledge_platform/users/: apps.py
m4n_knowledge_platform/utils/: apps.py  blocks.py  context_helpers.py  models.py  services.py  wagtail_hooks.py
static_compiled/css/: main.css
static_src/css/: main.css
static_src/javascript/: main.js
templates/: base.html  base_page.html
templates/components/: button.html  card--article.html  card--resources.html  card--search.html  card.html  footnotes.html  form-field.html  homepage_topic_listing.html  mailchimp-newsletter-subscription.html  pagination.html  related-pages.html  search.html  table-of-contents.html  theme-toggle.html
templates/navigation/: breadcrumbs.html  footer.html  header.html
templates/needs_and_solutions_hub/: wizard_step.html  (+1 more)
(+63 files in other folders)
