[project]
name = "m4n-knowledge-platform"
version = "0.1.0"
description = "The more4nature knowledge platform web application."
authors = [
    { name = "Tim Cowlishaw",email = "tim@timcowlishaw.co.uk" },
    { name= "Óscar González", email = "oscar@fablabbcn.org" },
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
